landing page done

--- a/index.html
+++ b/index.html
@@ -1955,7 +1955,7 @@
             settings: {
               slidesToShow: 1,
               slidesToScroll: 1,
-              // width: "80%",
+              variableWidth:false,
               arrows: false,
               autoplay: false,
               autoplaySpeed: 2000,
